--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,20 @@
     <artifactId>simple-maven-project-with-tests</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <distributionManagement>
+      <repository>
+        <id>nexus</id>
+        <name>maven-releases</name>
+        <url>http://localhost:8083/repository/maven-releases/</url
+      </repository>
+      <snapshotRepository>
+        <id>nexus</id>
+        <name>maven-snapshots</name>
+        <url>http://localhost:8083/repository/maven-snapshots/</url>
+      </snapshotRepository>
+    </distributionManagement>
+    
     <licenses>
         <license>
             <name>MIT License</name>
