--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
       <repository>
         <id>nexus</id>
         <name>maven-releases</name>
-         <url>http://localhost:8083/repository/maven-releases/</url>
+         <url>${env.NEXUS_RELEASES}</url>
       </repository>
       <snapshotRepository>
         <id>nexus</id>
         <name>maven-snapshots</name>
-        <url>http://localhost:8083/repository/maven-snapshots/</url>
+        <url>${env.NEXUS_SNAPSHOTS}</url>
       </snapshotRepository>
     </distributionManagement>
     
